# LaravelLangFieldsEditor

./: README.md  package-lock.json  package.json  tailwind.config.js
src/: main.jsx  router.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/Containers/: App.jsx
src/Pages/: Dashboard.jsx
src/Pages/LanguageFiles/: List.jsx
src/Pages/components/: EditDialog.jsx
src/components/: Sidebar.jsx
src/components/button/: Button.css  Button.jsx
src/components/header/: Header.jsx
src/components/layouts/: Layout.jsx
src/components/menus/: Menu.jsx
src/components/sidebar/: MenuItem.jsx  Navbar.jsx  Sidebar.css  Sidebar.jsx  Title.jsx
src/components/table/: Table.css  Table.jsx
src/store/: index.js  root.js
